--- a/CodeChamp/appsettings.json
+++ b/CodeChamp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Filename=CodeChamp.db",
+    "MQServer": "localhost"
+  },
   "AllowedHosts": "*"
 }
